syntax = "proto3";

package user;

service UserService {
  rpc GetUserProfile(GetUserProfileRequest) returns (UserProfileResponse);
  rpc UpdateProfile(UpdateProfileRequest) returns (UserProfileResponse);
  rpc FollowUser(FollowUserRequest) returns (FollowUserResponse);
  rpc UnfollowUser(UnfollowUserRequest) returns (UnfollowUserResponse);
  rpc GetFollowers(GetFollowersRequest) returns (GetFollowersResponse);
  rpc GetFollowing(GetFollowingRequest) returns (GetFollowingResponse);
  rpc SearchUsers(SearchUsersRequest) returns (SearchUsersResponse);
}

message GetUserProfileRequest {
  string user_id = 1;
}

message UserProfileResponse {
  string id = 1;
  string user_id = 2;
  string username = 3;
  string bio = 4;
  string profile_picture = 5;
  int32 followers_count = 6;
  int32 following_count = 7;
  bool is_following = 8;
}

message UpdateProfileRequest {
  string user_id = 1;
  string username = 2;
  string bio = 3;
  string profile_picture = 4;
}

message FollowUserRequest {
  string follower_id = 1;
  string following_id = 2;
}

message FollowUserResponse {
  bool success = 1;
  string message = 2;
}

message UnfollowUserRequest {
  string follower_id = 1;
  string following_id = 2;
}

message UnfollowUserResponse {
  bool success = 1;
  string message = 2;
}

message GetFollowersRequest {
  string user_id = 1;
  int32 page = 2;
  int32 limit = 3;
}

message GetFollowersResponse {
  repeated UserProfileResponse followers = 1;
  int32 total = 2;
  int32 page = 3;
}

message GetFollowingRequest {
  string user_id = 1;
  int32 page = 2;
  int32 limit = 3;
}

message GetFollowingResponse {
  repeated UserProfileResponse following = 1;
  int32 total = 2;
  int32 page = 3;
}

message SearchUsersRequest {
  string query = 1;
  string current_user_id = 2;
  int32 page = 3;
  int32 limit = 4;
}

message SearchUsersResponse {
  repeated UserProfileResponse users = 1;
  int32 total = 2;
  int32 page = 3;
}

